--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  camera: ^0.9.4+18
-  cupertino_icons: ^1.0.2
+  camera: ^0.9.4+21
+  cupertino_icons: ^1.0.4
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.1.2+1
+  flutter_native_splash: ^2.1.6
   tflite: ^1.1.2
 
 dev_dependencies:
